# bridge-bidding-systems

./: .gitignore  1c-opening.bml  2club-opening.bml  2d-multi.bml  2diamond-opening.bml  2level-alternatives.bml  2level-preempts.bml  2n-opening.bml  LICENSE  README.md  alternatives.bml  announcing.bml  bidding-system.bml  carding.bml  competitive-bidding.bml  dodo.py  high-openings.bml  justfile  nt-bidding.bml  opening-summary.bml  optimal_point_count.py  optimal_point_count_app.py  pyproject.toml  quiz.py  quiz_app.py  scanian-natural.bml  slam-bidding.bml  squad-system.bml  uncontested-bidding.bml  weak-strong-club-convention-card.bboalert  weak-strong-club.bboalert  youth-improvements.bml
deal-simulations/: 1c-any-2cd.tcl  1c-any-2h-or-2n.tcl  1c-any-2s.tcl  1c-any-long-suit-preempted.tcl  1c-any-preempt.tcl  1c-any.tcl  1c-strong-19plus-asymmetric-10plus-card-two-suiter.tcl  1c-strong-1d-1h-1s-likely.tcl  1c-strong-1d.tcl  1c-strong-1hs-support-unbal.tcl  1c-strong-1hs-support.tcl  1c-strong-21plus-unbal.tcl  1c-strong-extras-2cd.tcl  1c-strong-preempted.tcl  1c-strong.tcl  1d-any-invitish-no-major-or-inverted.tcl  1d-then-1x-interference-6major.tcl  1d-unbalanced-opener-gf-two-suiter.tcl  1d-unbalanced-opener-slam-try-two-suiter.tcl  1d-unbalanced-opener.tcl  1d-weak-minor-minors.tcl  1major-any.tcl  1major-invite-4plus-card-support.tcl  1minor-(overcall).tcl  1n-slam-try.tcl  1n-unbalanced.tcl  2c-any-slam-try.tcl  2c-any-unbalanced.tcl  2c-positive-two-suiter.tcl  2c-positive-unbalanced.tcl  2d-intermediate-any.tcl  2d-intermediate-strong.tcl  2d-intermediate-twoish-suiters-GF.tcl  2d-intermediate-under-invite.tcl  2d-intermediate-with-4cM.tcl  2d-opener-any-10-plus.tcl  2d-opener-any-18-plus.tcl  2hs-5-or-6-card-opener.tcl  2hs-any-12-plus.tcl  2hs-unbalanced-16-plus.tcl  (+22 more)
deal-simulations/odin-sims/: .editorconfig  .gitignore  COMBO_ANALYSER.md  bench.odin  bench_e2e.odin  justfile  parity.odin  parity.tcl  pbn_analyse.odin  sim.odin
deal-simulations/odin-sims/bidding/: bidding.odin  bidding_more_test.odin  bidding_test.odin  competitive.odin  helpers.odin  openers.odin  preempts.odin  scenarios.odin  shapes.odin  swedish_club.odin
deal-simulations/odin-sims/combo/: aids.odin  aids_test.odin  combine.odin  combine_test.odin  combo.odin  combo_test.odin  joint_test.odin  lines.odin  lines_test.odin  single_dummy.odin  single_dummy_opt.odin  single_dummy_opt_test.odin  single_dummy_test.odin  suit_encyclopedia.odin  suit_encyclopedia_test.odin
deal-simulations/odin-sims/dd/: dd.odin  pimc.odin  pimc_test.odin  sample.odin  sample_test.odin  tax.odin  tax_test.odin
deal-simulations/odin-sims/tests/: golden_sim_json.py
deal-simulations/odin-sims/tests/golden/: two_way_q_3nt.datasim.json  two_way_q_3nt.simguess.json
deal-simulations/odin-sims/tools/: ocr_analyse.py
deal-simulations/tcl-sims/: 1c-19plus-or-marmic.tcl  1c-any-1n-unbal.tcl  1c-any-1n.tcl  1c-any-2h-candidates.tcl  1c-any-3n-plus.tcl  1c-any-preempted.tcl  1c-strong-(overcall).tcl  1c-strong-19plus-unbal.tcl  1c-strong-1n-2c-2s-minor-response.tcl  1c-strong-1n-unbal.tcl  1c-strong-1n.tcl  1c-strong-2cd.tcl  1c-strong-2h-or-2n.tcl  1c-strong-2s.tcl  1c-strong-minor-opening-positive.tcl  1c-strong-responder-14plus-bal-gf.tcl  1c-strong-responder-bal-gf.tcl  1d-any-invitish-no-major-or-inverted.tcl  1d-any-splinter-preempt-wjs.tcl  1d-then-1x-interference.tcl  1major-10plus-splinterable.tcl  1major-game-force.tcl  1major-gf-3plus-card-support.tcl  1major-inviteish.tcl  1major-light-any.tcl  1major-max-6-carder-maybe-1nt.tcl  1major-minisplinter-or-single-suit-invite.tcl  1major-slam-try.tcl  1minor-(1s).tcl  1n-opener.tcl  1n-two-suiter.tcl  2c-any-two-suiter-slam-try.tcl  2c-opener.tcl  2c-positive-nine-plus-major-cards.tcl  2c-unbal-slam-try.tcl  2d-intermediate-good-6carder-GF.tcl  2d-intermediate-unbal-slam-try.tcl  2d-precision-any.tcl  2hs-5card-opener.tcl  2hs-any-20-plus.tcl  (+22 more)
hand-ocr/: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  TUTORIAL.md  _p.py  hand-ocr.py  justfile  pyproject.toml
hand-ocr/fixtures/expected/: bridge-base-2-hand-large.pbn  bridge-base-4-hand-large.pbn  bridgewebs-4.pbn  intobridge-2-hand-large.pbn  intobridge-4-hand-large.pbn  realbridge-4-results.pbn  realbridge-replay-1.pbn  realbridge-replay-2-nonvul.pbn
hand-ocr/hand_ocr/: __init__.py  anchor.py  atlas.py  detect.py  meta.py  model.py  pipeline.py  preprocess.py  recognize.py  rows.py  segment.py
hand-ocr/tests/: test_anchor.py  test_cards.py  test_detect.py  test_meta.py  test_model.py  test_regression.py  test_rows.py
hand-ocr/tools/: build_atlas.py  build_cards_atlas.py  sweep.py
