[project]
name = "bridge-bidding-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "docopt>=0.6.2",
    "doit>=0.36.0",
    "opentelemetry-distro>=0.59b0",
    "panel>=1.8.2",
    "watchfiles>=1.1.1",

    "opentelemetry-instrumentation-asyncio==0.59b0",
    "opentelemetry-instrumentation-dbapi==0.59b0",
    "opentelemetry-instrumentation-logging==0.59b0",
    "opentelemetry-instrumentation-sqlite3==0.59b0",
    "opentelemetry-instrumentation-threading==0.59b0",
    "opentelemetry-instrumentation-urllib==0.59b0",
    "opentelemetry-instrumentation-wsgi==0.59b0",
    "opentelemetry-instrumentation-jinja2==0.59b0",
    "opentelemetry-instrumentation-requests==0.59b0",
    "opentelemetry-instrumentation-tornado==0.59b0",
    "opentelemetry-instrumentation-urllib3==0.59b0",
    "opentelemetry-exporter-otlp-proto-grpc"
]

[dependency-groups]
dev = ["pytest"]

[tool.pyright]
venvPath = "."
venv =  ".venv"
pythonVersion = "3.14"
typeCheckingMode = "off"

[tool.ruff]
line-length = 120
